Document channel, message, role, user controllers
